--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,10 @@ jobs:
       # Build the app and run tests
       - run:
           name: Build and run tests
-          command: fastlane ios test
-          environment:
-            SCAN_DEVICE: iPhone 8
+          parallel: true
+          command: 
+            - fastlane ios test
+            - fastlane mac test
 
       # Collect XML test results data to show in the UI,
       # and save the same XML files under test-results folder
