--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,23 +21,13 @@ jobs:
       - run:
           name: Install Pods
           command: pod install
-
-      # Build the app and run tests
-      - run:
-          name: Build and run tests
-          parallel: true
-          command: 
-            - fastlane ios test
-            - fastlane mac test
-
-      # Collect XML test results data to show in the UI,
-      # and save the same XML files under test-results folder
-      # in the Artifacts tab
-      - store_test_results:
-          path: test_output/report.xml
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: scan-test-results
-      - store_artifacts:
-          path: ~/Library/Logs/scan
-          destination: scan-logs
+  test:
+    # Build the app and run tests
+      test_ios:
+        parallel: true
+        - run:
+            name: Build and run iOS tests
+            command: fastlane ios test
+        - run:
+            name: Build and run MacOS tests
+            command: fastlane mac test
