--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,6 @@
 #
 # Check https://circleci.com/docs/2.0/ios-migrating-from-1-2/ for more details
 #
-version: 2
-general:
-  branches:
-    only:
-     - circleci
 jobs:
   build:
 
@@ -35,8 +30,9 @@ jobs:
 workflows:
   version: 2
   build_and_test:
+    filters:
+      branches:
+        only:
+          - circleci
     jobs:
       - build
-      - test_ios:
-          requires:
-            - build
