--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,6 @@ jobs:
           command: pod install
 
   test_ios:
-
     macos:
       xcode: "9.2.0"
 
@@ -28,7 +27,6 @@ jobs:
           command: fastlane ios test
 
   test_mac:
-
     macos:
       xcode: "9.2.0"
 
@@ -42,3 +40,9 @@ workflows:
   build_and_test:
     jobs:
       - build
+      - test_ios:
+          requires:
+            - build
+      - test_mac:
+          requires:
+            - build
