--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # - run:
       #     name: Install Pods
       #     command: pod install
-      - run: bundle install
+      # - run: bundle install
 
   test_ios:
     macos:
