try circleci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ jobs:
     # Specify the Xcode version to use
     macos:
       xcode: "9.2.0"
-
+    
+    working_directory: /Users/algolia/output
+    
     steps:
       - checkout
       # Install Pods
@@ -20,6 +22,8 @@ jobs:
   test_ios:
     macos:
       xcode: "9.2.0"
+    
+    working_directory: /Users/algolia/output
 
     steps:
       - run:
@@ -30,6 +34,8 @@ jobs:
     macos:
       xcode: "9.2.0"
 
+    working_directory: /Users/algolia/output
+
     steps:
       - run:
           name: Build and run MacOS tests
@@ -38,6 +44,8 @@ jobs:
   test_tv:
     macos:
       xcode: "9.2.0"
+
+    working_directory: /Users/algolia/output
 
     steps:
       - run:
@@ -48,6 +56,8 @@ jobs:
     macos:
       xcode: "9.2.0"
 
+    working_directory: /Users/algolia/output
+    
     steps:
       - run:
           name: Build and run watchOS tests
