--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,10 @@ jobs:
       # - run:
       #     name: Install Pods
       #     command: pod install
-      # - run: bundle install
+      - run:
+        name: Set Ruby Version
+        command:  echo "ruby-2.4" > ~/.ruby-version
+      - run: bundle install
 
   test_ios:
     macos:
