--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       # - run:
       #     name: Install Pods
       #     command: pod install
+      - run: ruby -v
       - run:
           name: Set Ruby Version
           command:  echo "ruby-2.4" > ~/.ruby-version
