try circleci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run: ruby -v
       - run:
           name: Set Ruby Version
-          command:  echo "ruby-2.4" > ~/.ruby-version
+          command:  echo "ruby-2.4" > .ruby-version
       - run: ruby -v
       - run: bundle install
 
