--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     # Specify the Xcode version to use
     macos:
       xcode: "9.2.0"
+    shell: /bin/bash --login -eo pipefail
     
     working_directory: /Users/distiller/project
     
@@ -17,6 +18,10 @@ jobs:
       # - run:
       #     name: Install Pods
       #     command: pod install
+      - run: ruby -v
+      - run:
+          name: Set Ruby Version
+          command:  echo "ruby-2.4" > .ruby-version
       - run: ruby -v
       - run: bundle install
 
