--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ branches:
   only:
     - master
     - feat/offline-only-index
+    - travis_changes
 osx_image: xcode9
 language: objective-c
 env:
