--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ branches:
   only:
     - master
     - feat/offline-only-index
-    - travis_changes
+    - travis_stages
 osx_image: xcode9
 language: objective-c
 env:
